Bug 480831 - Can't turn off dynamic word wrap indicators
Summary: Can't turn off dynamic word wrap indicators
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.1
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-02-04 06:41 UTC by officialtyemaynard
Modified: 2024-02-05 17:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
As you can see in this video, this setting just won't change at all. It's very annoying (1.62 MB, video/mp4)
2024-02-04 06:41 UTC, officialtyemaynard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description officialtyemaynard 2024-02-04 06:41:33 UTC
Created attachment 165526 [details]
As you can see in this video, this setting just won't change at all.  It's very annoying

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Open Kate
2. Configure Kate settings
3. Turn off dynamic word wrap indicators

OBSERVED RESULT
The dynamic word wrap indicator setting can't be turned off, even after applying the changes(see attached video)

EXPECTED RESULT
The dynamic word wrap indicator setting should change

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 23.10
(available in About System)
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION
Comment 1 Doug 2024-02-05 05:03:42 UTC
This is still an issue in Plasma 6 as well.

Operating System: KDE neon Testing Edition
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.1
Kernel Version: 6.5.0-15-generic (64-bit)
Graphics Platform: Wayland
Processors: 12 × Intel® Core™ i7-9750H CPU @ 2.60GHz
Memory: 15.4 GiB of RAM
Graphics Processor: AMD Radeon Pro WX 3200 Series
Manufacturer: Dell Inc.
Product Name: Precision 7540
Comment 2 Bug Janitor Service 2024-02-05 06:24:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/664
Comment 3 Christoph Cullmann 2024-02-05 17:46:49 UTC
Git commit 43978aa976c1c95991d89da1f813d7be1d690bec by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 05/02/2024 at 17:41.
Pushed by cullmann into branch 'master'.

Fix dyn word wrap indicator validation check

M  +1    -1    src/utils/kateconfig.cpp

https://invent.kde.org/frameworks/ktexteditor/-/commit/43978aa976c1c95991d89da1f813d7be1d690bec