Fix dyn word wrap indicator validation check

BUG: 480831